0.0.3
-----
1. If 'Filter Christmas' is enabled, and its December, then we still need to do
   genre filtering.
2. If 'Restrict genres' is disabled then don't do genre filtering.
3. If 'Filter Christmas' is enabled, only disable if its December.

0.0.2
-----
1. Disable extension conversion by default.
2. Correctly read extension conversion config item.
3. Fix not filtering by genre.

0.0.1
-----
1. Initial release.