@@ -4,6 +4,9 @@
    genre filtering.
 2. If 'Restrict genres' is disabled then don't do genre filtering.
 3. If 'Filter Christmas' is enabled, only disable if its December.
+4. If a seed track is not in a genre group, we will filter out tracks which are
+   in a genre group. If this removes too many, then some of these might still be
+   used. (This is then a 'soft' filter).
 
 0.0.2
 -----
